<resources>
    <string name="app_name">Calendy</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <string name="profile_priv">Make my profile private</string>
    <string name="profile_priv_summary">
        Only your followers can see your profile
    </string>
    <string name="display_uni">Display my university</string>
    <string name="display_uni_summary">
        Your university can be seen on your profile
    </string>
    <string name="display_city">Display my city</string>
    <string name="display_city_summary">
        Your city can be seen on your profile
    </string>
    <string name="display_age">Display my age</string>
    <string name="display_age_summary">
        Your age can be seen on your profile
    </string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_calendars">Calendars</string>
    <string name="bottom_menu_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_today_fragment">Hello today fragment</string>
    <string name="hello_calendars_fragment">Hello calendars fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="calendar">Calendar</string>
    <string name="add_button_text">Add</string>
    <string name="add_event_description_hint">Some Cool Event</string>
    <string name="add_event_text_start_time">Start Time</string>
    <string name="add_event_text_end_time">End Time</string>
    <string name="add_reminder_time_text">Remind me on</string>
    <string name="date">Date</string>
    <string name="remind_me_to">Remind me to</string>
    <string name="calendy_text">Calendy</string>
    <string name="welcome_to_calendy">Welcome to Calendy!</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_question">How do you wish to proceed?</string>
    <string name="title_activity_login_page">loginPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_icon_text">login icon</string>
    <string name="login_back_text">login back</string>
    <string name="log_in">Log In</string>
    <string name="forgot_your_password_text">Forgot your password?</string>
    <string name="title_activity_signup_page">signupPage</string>
    <string name="date_of_birth">Date Of Birth (optional)</string>
    <string name="user_name">Name</string>
    <string name="user_city">City (optional)</string>
    <string name="user_university_name">University Name (optional)</string>
    <string name="top_bar_prev_day_button"><![CDATA[<]]></string>
    <string name="top_bar_next_day_button"><![CDATA[>]]></string>
    <string name="my_next_goal">My next goal!</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="_10">10</string>
    <string name="target">Target</string>
    <string name="goal_description">Goal Description</string>
    <string name="event_description">Event Description</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="count">Count</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="settings">Settings</string>
    <string name="add_calendar">Add Calendar</string>
    <string name="save">Save</string>
    <string name="university">University</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="fPassword_text">Please enter your Email to reset your password</string>
    <string name="enter_your_email_here">Enter your email here...</string>
    <string name="reset">Reset</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="birthdate_optional">Birthdate (optional)</string>
    <string name="calendar_name">Calendar Name</string>
    <string name="log_out">Log out</string>
    <string name="private_profile">Private Profile</string>
    <string name="fullname">FullName</string>
    <string name="public_switch">Public</string>
    <string name="search_users">Search users...</string>

    <string-array name="user_tasks">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

</resources>
