<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="peref_sync"
        android:title="@string/profile_priv"
        android:summary="@string/profile_priv_summary"
        android:defaultValue="false"/>

    <SwitchPreferenceCompat
        android:key="peref_sync"
        android:title="@string/display_uni"
        android:summary="@string/display_uni_summary"
        android:defaultValue="true"/>

    <SwitchPreferenceCompat
        android:key="peref_sync"
        android:title="@string/display_city"
        android:summary="@string/display_city_summary"
        android:defaultValue="true"/>

    <SwitchPreferenceCompat
        android:key="peref_sync"
        android:title="@string/display_age"
        android:summary="@string/display_age_summary"
        android:defaultValue="true"/>


</PreferenceScreen>