<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673ADC"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageButton
            android:id="@+id/signup_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#673ADC"
            android:contentDescription="@string/login_back_text"
            android:scrollbarSize="16dp"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/signup_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/login_icon_text"
            android:src="@mipmap/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_calendy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/calendy_text"
            android:textAppearance="@style/Theme.Calendy"
            android:textColor="#FFFFFF"
            android:textSize="58sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/signup_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signup_icon"
            app:layout_constraintTop_toTopOf="@+id/signup_icon" />

        <EditText
            android:id="@+id/userDob"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/date_of_birth"
            android:paddingLeft="49dp"
            android:background="@drawable/date_of_birth"
            android:inputType="date|textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userCity" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/name"
            android:hint="@string/user_name"
            android:inputType="none|textPersonName"
            android:paddingLeft="45dp"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_icon" />

        <EditText
            android:id="@+id/userCity"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/user_city"
            android:background="@drawable/city"
            android:paddingLeft="49dp"
            android:inputType="textLongMessage|textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userUniversity" />

        <EditText
            android:id="@+id/userUniversity"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/user_university_name"
            android:background="@drawable/university"
            android:paddingLeft="47dp"
            android:inputType="textShortMessage|none"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPasswordCheck" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/prompt_email"
            android:paddingLeft="45dp"
            android:background="@drawable/log_in_mail"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/prompt_password"
            android:paddingLeft="45dp"
            android:background="@drawable/login_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmail" />

        <EditText
            android:id="@+id/userPasswordCheck"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:hint="@string/user_confirm_password"
            android:background="@drawable/login_password"
            android:paddingLeft="45dp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:shadowColor="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="304dp"
            android:layout_height="54dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/log_in"
            android:hint="@string/sign_up"
            android:textColorHint="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userDob"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
