<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673ADC"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fPassword_button"
        style="@style/default_button"
        android:layout_width="278dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/log_in"
        android:text="@string/reset"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fP_email"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/login_calendy3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calendy_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_icon2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/login_icon_text"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toStartOf="@+id/login_calendy3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fP_back" />

    <ImageButton
        android:id="@+id/fP_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#673ADC"
        android:contentDescription="@string/login_back_text"
        android:onClick="fPgoBack"
        android:scrollbarSize="16dp"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fPassword_text"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:text="@string/fPassword_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon2" />

    <EditText
        android:id="@+id/fP_email"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="95dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_email_here"
        android:paddingLeft="45dp"
        android:background="@drawable/log_in_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fPassword_text" />

</androidx.constraintlayout.widget.ConstraintLayout>